# zephyr_lpc43xx

./: Kconfig  PORTING_GUIDE.md
boards/ciaa/edu_ciaa_nxp/: Kconfig.defconfig  Kconfig.edu_ciaa_nxp  board.cmake  board.yml  edu_ciaa_nxp_lpc4337.dts  edu_ciaa_nxp_lpc4337_defconfig
boards/ciaa/edu_ciaa_nxp/support/: openocd.cfg
cmake/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  gpio_nxp_lpc43xx.c
drivers/pinctrl/: CMakeLists.txt  pinctrl_nxp_lpc43xx.c
drivers/serial/: CMakeLists.txt  serial_nxp_lpc43xx.c
dts/arm/nxp/: nxp_lpc4337.dtsi
dts/bindings/gpio/: nxp,lpc43xx-gpio-port.yaml  nxp,lpc43xx-gpio.yaml
dts/bindings/pinctrl/: nxp,lpc43xx-pinctrl.yaml
dts/bindings/serial/: nxp,lpc43xx-uart.yaml
include/dt-bindings/pinctrl/: lpc43xx-pinctrl.h
lpc_chip_43xx/include/config_43xx/: sys_config.h
soc/nxp/lpc43xx/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  linker.ld  pinctrl_soc.h  soc.c  soc.h  soc.yml
zephyr/: module.yml
